tests/fixtures/invalid/pow_int_set_str.py
# Cannot call pow() with Int, Set[int], Str
x = pow(1, {1, 2, 3}, "hello")
